fix code format