@@ -19,17 +19,8 @@
 
 package org.codelibs.fesen.ingest.common;
 
-import org.codelibs.fesen.ingest.CompoundProcessor;
-import org.codelibs.fesen.ingest.IngestDocument;
-import org.codelibs.fesen.ingest.Processor;
-import org.codelibs.fesen.ingest.TestProcessor;
-import org.codelibs.fesen.ingest.TestTemplateService;
-import org.codelibs.fesen.ingest.common.AppendProcessor;
-import org.codelibs.fesen.ingest.common.ForEachProcessor;
-import org.codelibs.fesen.ingest.common.SetProcessor;
-import org.codelibs.fesen.ingest.common.UppercaseProcessor;
-import org.codelibs.fesen.script.TemplateScript;
-import org.codelibs.fesen.test.ESTestCase;
+import static org.codelibs.fesen.ingest.IngestDocumentMatcher.assertIngestDocument;
+import static org.hamcrest.Matchers.equalTo;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -42,8 +33,13 @@ import java.util.function.BiConsumer;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import static org.codelibs.fesen.ingest.IngestDocumentMatcher.assertIngestDocument;
-import static org.hamcrest.Matchers.equalTo;
+import org.codelibs.fesen.ingest.CompoundProcessor;
+import org.codelibs.fesen.ingest.IngestDocument;
+import org.codelibs.fesen.ingest.Processor;
+import org.codelibs.fesen.ingest.TestProcessor;
+import org.codelibs.fesen.ingest.TestTemplateService;
+import org.codelibs.fesen.script.TemplateScript;
+import org.codelibs.fesen.test.ESTestCase;
 
 public class ForEachProcessorTests extends ESTestCase {
 
@@ -52,14 +48,11 @@ public class ForEachProcessorTests extends ESTestCase {
         values.add("foo");
         values.add("bar");
         values.add("baz");
-        IngestDocument ingestDocument = new IngestDocument(
-            "_index", "_type", "_id", null, null, null, Collections.singletonMap("values", values)
-        );
+        IngestDocument ingestDocument =
+                new IngestDocument("_index", "_type", "_id", null, null, null, Collections.singletonMap("values", values));
 
-        ForEachProcessor processor = new ForEachProcessor("_tag", null, "values", new AsyncUpperCaseProcessor("_ingest._value"),
-            false);
-        processor.execute(ingestDocument, (result, e) -> {
-        });
+        ForEachProcessor processor = new ForEachProcessor("_tag", null, "values", new AsyncUpperCaseProcessor("_ingest._value"), false);
+        processor.execute(ingestDocument, (result, e) -> {});
 
         assertBusy(() -> {
             @SuppressWarnings("unchecked")
@@ -72,9 +65,8 @@ public class ForEachProcessorTests extends ESTestCase {
     }
 
     public void testExecuteWithFailure() throws Exception {
-        IngestDocument ingestDocument = new IngestDocument(
-            "_index", "_type", "_id", null, null, null, Collections.singletonMap("values", Arrays.asList("a", "b", "c"))
-        );
+        IngestDocument ingestDocument = new IngestDocument("_index", "_type", "_id", null, null, null,
+                Collections.singletonMap("values", Arrays.asList("a", "b", "c")));
 
         TestProcessor testProcessor = new TestProcessor(id -> {
             if ("c".equals(id.getFieldValue("_ingest._value", String.class))) {
@@ -83,7 +75,9 @@ public class ForEachProcessorTests extends ESTestCase {
         });
         ForEachProcessor processor = new ForEachProcessor("_tag", null, "values", testProcessor, false);
         Exception[] exceptions = new Exception[1];
-        processor.execute(ingestDocument, (result, e) -> {exceptions[0] = e;});
+        processor.execute(ingestDocument, (result, e) -> {
+            exceptions[0] = e;
+        });
         assertThat(exceptions[0].getMessage(), equalTo("failure"));
         assertThat(testProcessor.getInvokedCounter(), equalTo(3));
         assertThat(ingestDocument.getFieldValue("values", List.class), equalTo(Arrays.asList("a", "b", "c")));
@@ -97,10 +91,8 @@ public class ForEachProcessorTests extends ESTestCase {
             }
         });
         Processor onFailureProcessor = new TestProcessor(ingestDocument1 -> {});
-        processor = new ForEachProcessor(
-            "_tag", null, "values", new CompoundProcessor(false, Arrays.asList(testProcessor), Arrays.asList(onFailureProcessor)),
-            false
-        );
+        processor = new ForEachProcessor("_tag", null, "values",
+                new CompoundProcessor(false, Arrays.asList(testProcessor), Arrays.asList(onFailureProcessor)), false);
         processor.execute(ingestDocument, (result, e) -> {});
         assertThat(testProcessor.getInvokedCounter(), equalTo(3));
         assertThat(ingestDocument.getFieldValue("values", List.class), equalTo(Arrays.asList("A", "B", "c")));
@@ -110,9 +102,8 @@ public class ForEachProcessorTests extends ESTestCase {
         List<Map<String, Object>> values = new ArrayList<>();
         values.add(new HashMap<>());
         values.add(new HashMap<>());
-        IngestDocument ingestDocument = new IngestDocument(
-            "_index", "_type", "_id", null, null, null, Collections.singletonMap("values", values)
-        );
+        IngestDocument ingestDocument =
+                new IngestDocument("_index", "_type", "_id", null, null, null, Collections.singletonMap("values", values));
 
         TestProcessor innerProcessor = new TestProcessor(id -> {
             id.setFieldValue("_ingest._value.index", id.getSourceAndMetadata().get("_index"));
@@ -145,9 +136,9 @@ public class ForEachProcessorTests extends ESTestCase {
         IngestDocument ingestDocument = new IngestDocument("_index", "_type", "_id", null, null, null, document);
 
         ForEachProcessor processor = new ForEachProcessor(
-            "_tag", null, "values", new SetProcessor("_tag",
-            null, new TestTemplateService.MockTemplateScript.Factory("_ingest._value.new_field"),
-            (model) -> model.get("other")), false);
+                "_tag", null, "values", new SetProcessor("_tag", null,
+                        new TestTemplateService.MockTemplateScript.Factory("_ingest._value.new_field"), (model) -> model.get("other")),
+                false);
         processor.execute(ingestDocument, (result, e) -> {});
 
         assertThat(ingestDocument.getFieldValue("values.0.new_field", String.class), equalTo("value"));
@@ -159,22 +150,22 @@ public class ForEachProcessorTests extends ESTestCase {
 
     public void testRandom() {
         Processor innerProcessor = new Processor() {
-                @Override
-                public IngestDocument execute(IngestDocument ingestDocument) {
-                    String existingValue = ingestDocument.getFieldValue("_ingest._value", String.class);
-                    ingestDocument.setFieldValue("_ingest._value", existingValue + ".");
-                    return ingestDocument;
-                }
+            @Override
+            public IngestDocument execute(IngestDocument ingestDocument) {
+                String existingValue = ingestDocument.getFieldValue("_ingest._value", String.class);
+                ingestDocument.setFieldValue("_ingest._value", existingValue + ".");
+                return ingestDocument;
+            }
 
-                @Override
-                public String getType() {
-                    return null;
-                }
+            @Override
+            public String getType() {
+                return null;
+            }
 
-                @Override
-                public String getTag() {
-                    return null;
-                }
+            @Override
+            public String getTag() {
+                return null;
+            }
 
             @Override
             public String getDescription() {
@@ -182,11 +173,10 @@ public class ForEachProcessorTests extends ESTestCase {
             }
         };
         int numValues = randomIntBetween(1, 10000);
-        List<String> values = IntStream.range(0, numValues).mapToObj(i->"").collect(Collectors.toList());
+        List<String> values = IntStream.range(0, numValues).mapToObj(i -> "").collect(Collectors.toList());
 
-        IngestDocument ingestDocument = new IngestDocument(
-            "_index", "_type", "_id", null, null, null, Collections.singletonMap("values", values)
-        );
+        IngestDocument ingestDocument =
+                new IngestDocument("_index", "_type", "_id", null, null, null, Collections.singletonMap("values", values));
 
         ForEachProcessor processor = new ForEachProcessor("_tag", null, "values", innerProcessor, false);
         processor.execute(ingestDocument, (result, e) -> {});
@@ -202,19 +192,16 @@ public class ForEachProcessorTests extends ESTestCase {
         values.add("string");
         values.add(1);
         values.add(null);
-        IngestDocument ingestDocument = new IngestDocument(
-                "_index", "_type", "_id", null, null, null, Collections.singletonMap("values", values)
-        );
+        IngestDocument ingestDocument =
+                new IngestDocument("_index", "_type", "_id", null, null, null, Collections.singletonMap("values", values));
 
         TemplateScript.Factory template = new TestTemplateService.MockTemplateScript.Factory("errors");
 
-        ForEachProcessor processor = new ForEachProcessor(
-                "_tag", null, "values", new CompoundProcessor(false,
-                org.codelibs.fesen.core.List.of(
-                    new UppercaseProcessor("_tag_upper", null, "_ingest._value", false, "_ingest._value")),
-                org.codelibs.fesen.core.List.of(
-                    new AppendProcessor("_tag", null, template, (model) -> (Collections.singletonList("added")), true))
-        ), false);
+        ForEachProcessor processor = new ForEachProcessor("_tag", null, "values", new CompoundProcessor(false,
+                org.codelibs.fesen.core.List.of(new UppercaseProcessor("_tag_upper", null, "_ingest._value", false, "_ingest._value")),
+                org.codelibs.fesen.core.List
+                        .of(new AppendProcessor("_tag", null, template, (model) -> (Collections.singletonList("added")), true))),
+                false);
         processor.execute(ingestDocument, (result, e) -> {});
 
         List<?> result = ingestDocument.getFieldValue("values", List.class);
@@ -234,12 +221,10 @@ public class ForEachProcessorTests extends ESTestCase {
         Map<String, Object> source = new HashMap<>();
         source.put("_value", "new_value");
         source.put("values", values);
-        IngestDocument ingestDocument = new IngestDocument(
-                "_index", "_type", "_id", null, null, null, source
-        );
+        IngestDocument ingestDocument = new IngestDocument("_index", "_type", "_id", null, null, null, source);
 
-        TestProcessor processor = new TestProcessor(doc -> doc.setFieldValue("_ingest._value",
-                doc.getFieldValue("_source._value", String.class)));
+        TestProcessor processor =
+                new TestProcessor(doc -> doc.setFieldValue("_ingest._value", doc.getFieldValue("_source._value", String.class)));
         ForEachProcessor forEachProcessor = new ForEachProcessor("_tag", null, "values", processor, false);
         forEachProcessor.execute(ingestDocument, (result, e) -> {});
 
@@ -265,16 +250,13 @@ public class ForEachProcessorTests extends ESTestCase {
         value.put("values2", innerValues);
         values.add(value);
 
-        IngestDocument ingestDocument = new IngestDocument(
-                "_index", "_type", "_id", null, null, null, Collections.singletonMap("values1", values)
-        );
+        IngestDocument ingestDocument =
+                new IngestDocument("_index", "_type", "_id", null, null, null, Collections.singletonMap("values1", values));
 
         TestProcessor testProcessor = new TestProcessor(
-                doc -> doc.setFieldValue("_ingest._value", doc.getFieldValue("_ingest._value", String.class).toUpperCase(Locale.ENGLISH))
-        );
-        ForEachProcessor processor = new ForEachProcessor(
-                "_tag", null, "values1", new ForEachProcessor("_tag", null, "_ingest._value.values2", testProcessor, false),
-            false);
+                doc -> doc.setFieldValue("_ingest._value", doc.getFieldValue("_ingest._value", String.class).toUpperCase(Locale.ENGLISH)));
+        ForEachProcessor processor = new ForEachProcessor("_tag", null, "values1",
+                new ForEachProcessor("_tag", null, "_ingest._value.values2", testProcessor, false), false);
         processor.execute(ingestDocument, (result, e) -> {});
 
         List<?> result = ingestDocument.getFieldValue("values1.0.values2", List.class);
@@ -287,9 +269,7 @@ public class ForEachProcessorTests extends ESTestCase {
     }
 
     public void testIgnoreMissing() throws Exception {
-        IngestDocument originalIngestDocument = new IngestDocument(
-            "_index", "_type", "_id", null, null, null, Collections.emptyMap()
-        );
+        IngestDocument originalIngestDocument = new IngestDocument("_index", "_type", "_id", null, null, null, Collections.emptyMap());
         IngestDocument ingestDocument = new IngestDocument(originalIngestDocument);
         TestProcessor testProcessor = new TestProcessor(doc -> {});
         ForEachProcessor processor = new ForEachProcessor("_tag", null, "_ingest._value", testProcessor, true);
@@ -302,7 +282,7 @@ public class ForEachProcessorTests extends ESTestCase {
         Map<String, Object> source = Collections.singletonMap("field", Arrays.asList("a", "b"));
         IngestDocument originalIngestDocument = new IngestDocument("_index", "_type", "_id", null, null, null, source);
         IngestDocument ingestDocument = new IngestDocument(originalIngestDocument);
-        TestProcessor testProcessor = new TestProcessor(id->id.appendFieldValue("field", "a"));
+        TestProcessor testProcessor = new TestProcessor(id -> id.appendFieldValue("field", "a"));
         ForEachProcessor processor = new ForEachProcessor("_tag", null, "field", testProcessor, true);
         processor.execute(ingestDocument, (result, e) -> {});
         assertThat(testProcessor.getInvokedCounter(), equalTo(2));
