@@ -80,8 +80,10 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
 
         @Override
         public boolean equals(Object o) {
-            if (this == o) return true;
-            if (o == null || getClass() != o.getClass()) return false;
+            if (this == o)
+                return true;
+            if (o == null || getClass() != o.getClass())
+                return false;
             StringWrapper that = (StringWrapper) o;
             return Objects.equals(name, that.name);
         }
@@ -98,46 +100,37 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
 
     public static class Builder extends ParametrizedFieldMapper.Builder {
 
-        final Parameter<Boolean> fixed
-            = Parameter.boolParam("fixed", false, m -> toType(m).fixed, true);
-        final Parameter<Boolean> fixed2
-            = Parameter.boolParam("fixed2", false, m -> toType(m).fixed2, false)
-            .addDeprecatedName("fixed2_old");
-        final Parameter<String> variable
-            = Parameter.stringParam("variable", true, m -> toType(m).variable, "default").acceptsNull();
-        final Parameter<StringWrapper> wrapper
-            = new Parameter<>("wrapper", false, () -> new StringWrapper("default"),
-            (n, c, o) -> {
-                if (o == null) return null;
-                return new StringWrapper(o.toString());
-                },
-            m -> toType(m).wrapper).setSerializer((b, n, v) -> b.field(n, v.name), v -> "wrapper_" + v.name);
-        final Parameter<Integer> intValue = Parameter.intParam("int_value", true, m -> toType(m).intValue, 5)
-            .setValidator(n -> {
-                if (n > 50) {
-                    throw new IllegalArgumentException("Value of [n] cannot be greater than 50");
-                }
-            })
-            .setMergeValidator((o, n) -> n >= o);
-        final Parameter<NamedAnalyzer> analyzer
-            = Parameter.analyzerParam("analyzer", false, m -> toType(m).analyzer, () -> Lucene.KEYWORD_ANALYZER);
-        final Parameter<NamedAnalyzer> searchAnalyzer
-            = Parameter.analyzerParam("search_analyzer", true, m -> toType(m).searchAnalyzer, analyzer::getValue);
+        final Parameter<Boolean> fixed = Parameter.boolParam("fixed", false, m -> toType(m).fixed, true);
+        final Parameter<Boolean> fixed2 =
+                Parameter.boolParam("fixed2", false, m -> toType(m).fixed2, false).addDeprecatedName("fixed2_old");
+        final Parameter<String> variable = Parameter.stringParam("variable", true, m -> toType(m).variable, "default").acceptsNull();
+        final Parameter<StringWrapper> wrapper = new Parameter<>("wrapper", false, () -> new StringWrapper("default"), (n, c, o) -> {
+            if (o == null)
+                return null;
+            return new StringWrapper(o.toString());
+        }, m -> toType(m).wrapper).setSerializer((b, n, v) -> b.field(n, v.name), v -> "wrapper_" + v.name);
+        final Parameter<Integer> intValue = Parameter.intParam("int_value", true, m -> toType(m).intValue, 5).setValidator(n -> {
+            if (n > 50) {
+                throw new IllegalArgumentException("Value of [n] cannot be greater than 50");
+            }
+        }).setMergeValidator((o, n) -> n >= o);
+        final Parameter<NamedAnalyzer> analyzer =
+                Parameter.analyzerParam("analyzer", false, m -> toType(m).analyzer, () -> Lucene.KEYWORD_ANALYZER);
+        final Parameter<NamedAnalyzer> searchAnalyzer =
+                Parameter.analyzerParam("search_analyzer", true, m -> toType(m).searchAnalyzer, analyzer::getValue);
         final Parameter<Boolean> index = Parameter.boolParam("index", false, m -> toType(m).index, true);
-        final Parameter<String> required = Parameter.stringParam("required", true, m -> toType(m).required, null)
-            .setValidator(value -> {
-                if (value == null) {
-                    throw new IllegalArgumentException("field [required] must be specified");
-                }
-            });
-        final Parameter<String> restricted
-            = Parameter.restrictedStringParam("restricted", true, m -> toType(m).restricted, "foo", "bar");
+        final Parameter<String> required = Parameter.stringParam("required", true, m -> toType(m).required, null).setValidator(value -> {
+            if (value == null) {
+                throw new IllegalArgumentException("field [required] must be specified");
+            }
+        });
+        final Parameter<String> restricted = Parameter.restrictedStringParam("restricted", true, m -> toType(m).restricted, "foo", "bar");
 
         protected Builder(String name) {
             super(name);
             // only output search analyzer if different to analyzer
             searchAnalyzer.setSerializerCheck(
-                (id, ic, v) -> Objects.equals(analyzer.getValue().name(), searchAnalyzer.getValue().name()) == false);
+                    (id, ic, v) -> Objects.equals(analyzer.getValue().name(), searchAnalyzer.getValue().name()) == false);
         }
 
         @Override
@@ -147,8 +140,7 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
 
         @Override
         public ParametrizedFieldMapper build(Mapper.BuilderContext context) {
-            return new TestMapper(name(), buildFullName(context),
-                multiFieldsBuilder.build(this, context), copyTo.build(), this);
+            return new TestMapper(name(), buildFullName(context), multiFieldsBuilder.build(this, context), copyTo.build(), this);
         }
     }
 
@@ -176,7 +168,7 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
         private final String restricted;
 
         protected TestMapper(String simpleName, String fullName, MultiFields multiFields, CopyTo copyTo,
-                             ParametrizedMapperTests.Builder builder) {
+                ParametrizedMapperTests.Builder builder) {
             super(simpleName, new KeywordFieldMapper.KeywordFieldType(fullName), multiFields, copyTo);
             this.fixed = builder.fixed.getValue();
             this.fixed2 = builder.fixed2.getValue();
@@ -209,11 +201,9 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
     private static TestMapper fromMapping(String mapping, Version version) {
         MapperService mapperService = mock(MapperService.class);
         IndexAnalyzers indexAnalyzers = new IndexAnalyzers(
-            org.codelibs.fesen.core.Map.of(
-                "_standard", Lucene.STANDARD_ANALYZER,
-                "_keyword", Lucene.KEYWORD_ANALYZER,
-                "default", new NamedAnalyzer("default", AnalyzerScope.INDEX, new StandardAnalyzer())),
-            Collections.emptyMap(), Collections.emptyMap());
+                org.codelibs.fesen.core.Map.of("_standard", Lucene.STANDARD_ANALYZER, "_keyword", Lucene.KEYWORD_ANALYZER, "default",
+                        new NamedAnalyzer("default", AnalyzerScope.INDEX, new StandardAnalyzer())),
+                Collections.emptyMap(), Collections.emptyMap());
         when(mapperService.getIndexAnalyzers()).thenReturn(indexAnalyzers);
         Mapper.TypeParser.ParserContext pc = new Mapper.TypeParser.ParserContext(s -> null, mapperService, s -> {
             if (Objects.equals("keyword", s)) {
@@ -224,9 +214,8 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
             }
             return null;
         }, version, () -> null, null, null);
-        return (TestMapper) new TypeParser()
-            .parse("field", XContentHelper.convertToMap(JsonXContent.jsonXContent, mapping, true), pc)
-            .build(new Mapper.BuilderContext(Settings.EMPTY, new ContentPath(0)));
+        return (TestMapper) new TypeParser().parse("field", XContentHelper.convertToMap(JsonXContent.jsonXContent, mapping, true), pc)
+                .build(new Mapper.BuilderContext(Settings.EMPTY, new ContentPath(0)));
     }
 
     private static TestMapper fromMapping(String mapping) {
@@ -252,11 +241,9 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
         assertEquals("default", mapper.variable);
 
         assertEquals("{\"field\":" + mapping + "}", Strings.toString(mapper));
-        assertEquals("{\"field\":{\"type\":\"test_mapper\",\"fixed\":true," +
-                "\"fixed2\":false,\"variable\":\"default\",\"index\":true," +
-                "\"wrapper\":\"default\",\"int_value\":5,\"analyzer\":\"_keyword\"," +
-                "\"required\":\"value\",\"restricted\":\"foo\"}}",
-            toStringWithDefaults(mapper));
+        assertEquals("{\"field\":{\"type\":\"test_mapper\",\"fixed\":true," + "\"fixed2\":false,\"variable\":\"default\",\"index\":true,"
+                + "\"wrapper\":\"default\",\"int_value\":5,\"analyzer\":\"_keyword\"," + "\"required\":\"value\",\"restricted\":\"foo\"}}",
+                toStringWithDefaults(mapper));
     }
 
     // merging - try updating 'fixed' and 'fixed2' should get an error, try updating 'variable' and verify update
@@ -267,38 +254,38 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
 
         TestMapper badMerge = fromMapping("{\"type\":\"test_mapper\",\"fixed\":true,\"fixed2\":true,\"required\":\"value\"}");
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> mapper.merge(badMerge));
-        String expectedError = "Mapper for [field] conflicts with existing mapper:\n" +
-            "\tCannot update parameter [fixed] from [false] to [true]\n" +
-            "\tCannot update parameter [fixed2] from [false] to [true]";
+        String expectedError =
+                "Mapper for [field] conflicts with existing mapper:\n" + "\tCannot update parameter [fixed] from [false] to [true]\n"
+                        + "\tCannot update parameter [fixed2] from [false] to [true]";
         assertEquals(expectedError, e.getMessage());
 
-        assertEquals("{\"field\":" + mapping + "}", Strings.toString(mapper));   // original mapping is unaffected
+        assertEquals("{\"field\":" + mapping + "}", Strings.toString(mapper)); // original mapping is unaffected
 
         // TODO: should we have to include 'fixed' here? Or should updates take as 'defaults' the existing values?
         TestMapper goodMerge = fromMapping("{\"type\":\"test_mapper\",\"fixed\":false,\"variable\":\"updated\",\"required\":\"value\"}");
         TestMapper merged = (TestMapper) mapper.merge(goodMerge);
 
-        assertEquals("{\"field\":" + mapping + "}", Strings.toString(mapper));   // original mapping is unaffected
+        assertEquals("{\"field\":" + mapping + "}", Strings.toString(mapper)); // original mapping is unaffected
         assertEquals("{\"field\":{\"type\":\"test_mapper\",\"fixed\":false,\"variable\":\"updated\",\"required\":\"value\"}}",
-            Strings.toString(merged));
+                Strings.toString(merged));
     }
 
     // add multifield, verify, add second multifield, verify, overwrite second multifield
     public void testMultifields() {
-        String mapping = "{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\"," +
-            "\"fields\":{\"sub\":{\"type\":\"keyword\"}}}";
+        String mapping =
+                "{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\"," + "\"fields\":{\"sub\":{\"type\":\"keyword\"}}}";
         TestMapper mapper = fromMapping(mapping);
         assertEquals("{\"field\":" + mapping + "}", Strings.toString(mapper));
 
-        String addSubField = "{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\"" +
-            ",\"fields\":{\"sub2\":{\"type\":\"keyword\"}}}";
+        String addSubField =
+                "{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\"" + ",\"fields\":{\"sub2\":{\"type\":\"keyword\"}}}";
         TestMapper toMerge = fromMapping(addSubField);
         TestMapper merged = (TestMapper) mapper.merge(toMerge);
-        assertEquals("{\"field\":{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\"," +
-            "\"fields\":{\"sub\":{\"type\":\"keyword\"},\"sub2\":{\"type\":\"keyword\"}}}}", Strings.toString(merged));
+        assertEquals("{\"field\":{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\","
+                + "\"fields\":{\"sub\":{\"type\":\"keyword\"},\"sub2\":{\"type\":\"keyword\"}}}}", Strings.toString(merged));
 
-        String badSubField = "{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\"," +
-            "\"fields\":{\"sub2\":{\"type\":\"binary\"}}}";
+        String badSubField =
+                "{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\"," + "\"fields\":{\"sub2\":{\"type\":\"binary\"}}}";
         TestMapper badToMerge = fromMapping(badSubField);
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> merged.merge(badToMerge));
         assertEquals("mapper [field.sub2] cannot be changed from type [keyword] to [binary]", e.getMessage());
@@ -312,12 +299,12 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
 
         // On update, copy_to is completely replaced
 
-        TestMapper toMerge = fromMapping("{\"type\":\"test_mapper\",\"variable\":\"updated\",\"required\":\"value\"," +
-            "\"copy_to\":[\"foo\",\"bar\"]}");
+        TestMapper toMerge = fromMapping(
+                "{\"type\":\"test_mapper\",\"variable\":\"updated\",\"required\":\"value\"," + "\"copy_to\":[\"foo\",\"bar\"]}");
         TestMapper merged = (TestMapper) mapper.merge(toMerge);
-        assertEquals("{\"field\":{\"type\":\"test_mapper\",\"variable\":\"updated\",\"required\":\"value\"," +
-                "\"copy_to\":[\"foo\",\"bar\"]}}",
-            Strings.toString(merged));
+        assertEquals(
+                "{\"field\":{\"type\":\"test_mapper\",\"variable\":\"updated\",\"required\":\"value\"," + "\"copy_to\":[\"foo\",\"bar\"]}}",
+                Strings.toString(merged));
 
         TestMapper removeCopyTo = fromMapping("{\"type\":\"test_mapper\",\"variable\":\"updated\",\"required\":\"value\"}");
         TestMapper noCopyTo = (TestMapper) merged.merge(removeCopyTo);
@@ -336,14 +323,9 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
 
     public void testObjectSerialization() throws IOException {
 
-        String mapping = "{\"_doc\":{" +
-            "\"properties\":{" +
-            "\"actual\":{\"type\":\"double\"}," +
-            "\"bucket_count\":{\"type\":\"long\"}," +
-            "\"bucket_influencers\":{\"type\":\"nested\",\"properties\":{" +
-            "\"anomaly_score\":{\"type\":\"double\"}," +
-            "\"bucket_span\":{\"type\":\"long\"}," +
-            "\"is_interim\":{\"type\":\"boolean\"}}}}}}";
+        String mapping = "{\"_doc\":{" + "\"properties\":{" + "\"actual\":{\"type\":\"double\"}," + "\"bucket_count\":{\"type\":\"long\"},"
+                + "\"bucket_influencers\":{\"type\":\"nested\",\"properties\":{" + "\"anomaly_score\":{\"type\":\"double\"},"
+                + "\"bucket_span\":{\"type\":\"long\"}," + "\"is_interim\":{\"type\":\"boolean\"}}}}}}";
 
         MapperService mapperService = createMapperService("_doc", mapping);
         assertEquals(mapping, Strings.toString(mapperService.documentMapper()));
@@ -362,8 +344,8 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
         String conflict = "{\"type\":\"test_mapper\",\"wrapper\":\"new value\",\"required\":\"value\"}";
         TestMapper toMerge = fromMapping(conflict);
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> mapper.merge(toMerge));
-        assertEquals("Mapper for [field] conflicts with existing mapper:\n" +
-            "\tCannot update parameter [wrapper] from [wrapper_wrapped value] to [wrapper_new value]", e.getMessage());
+        assertEquals("Mapper for [field] conflicts with existing mapper:\n"
+                + "\tCannot update parameter [wrapper] from [wrapper_wrapped value] to [wrapper_new value]", e.getMessage());
     }
 
     // test validator
@@ -374,7 +356,7 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
         assertEquals("{\"field\":" + mapping + "}", Strings.toString(mapper));
 
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class,
-            () -> fromMapping("{\"type\":\"test_mapper\",\"int_value\":60,\"required\":\"value\"}"));
+                () -> fromMapping("{\"type\":\"test_mapper\",\"int_value\":60,\"required\":\"value\"}"));
         assertEquals("Value of [n] cannot be greater than 50", e.getMessage());
     }
 
@@ -406,8 +388,8 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
         TestMapper original = mapper;
         TestMapper toMerge = fromMapping(mapping);
         e = expectThrows(IllegalArgumentException.class, () -> original.merge(toMerge));
-        assertEquals("Mapper for [field] conflicts with existing mapper:\n" +
-            "\tCannot update parameter [analyzer] from [default] to [_standard]", e.getMessage());
+        assertEquals("Mapper for [field] conflicts with existing mapper:\n"
+                + "\tCannot update parameter [analyzer] from [default] to [_standard]", e.getMessage());
     }
 
     public void testDeprecatedParameters() {
@@ -432,8 +414,8 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
         assertEquals("_standard", mapper.searchAnalyzer.name());
         assertEquals("{\"field\":" + mappingWithSA + "}", Strings.toString(mapper));
 
-        String mappingWithBoth = "{\"type\":\"test_mapper\",\"analyzer\":\"default\"," +
-            "\"search_analyzer\":\"_standard\",\"required\":\"value\"}";
+        String mappingWithBoth =
+                "{\"type\":\"test_mapper\",\"analyzer\":\"default\"," + "\"search_analyzer\":\"_standard\",\"required\":\"value\"}";
         mapper = fromMapping(mappingWithBoth);
         assertEquals("default", mapper.analyzer.name());
         assertEquals("_standard", mapper.searchAnalyzer.name());
@@ -441,18 +423,16 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
 
         // we've configured things so that search_analyzer is only output when different from
         // analyzer, no matter what the value of `include_defaults` is
-        String mappingWithSame = "{\"type\":\"test_mapper\",\"analyzer\":\"default\"," +
-            "\"search_analyzer\":\"default\",\"required\":\"value\"}";
+        String mappingWithSame =
+                "{\"type\":\"test_mapper\",\"analyzer\":\"default\"," + "\"search_analyzer\":\"default\",\"required\":\"value\"}";
         mapper = fromMapping(mappingWithSame);
         assertEquals("default", mapper.analyzer.name());
         assertEquals("default", mapper.searchAnalyzer.name());
         assertEquals("{\"field\":{\"type\":\"test_mapper\",\"analyzer\":\"default\",\"required\":\"value\"}}", Strings.toString(mapper));
 
-        assertEquals("{\"field\":{\"type\":\"test_mapper\",\"fixed\":true," +
-                "\"fixed2\":false,\"variable\":\"default\",\"index\":true," +
-                "\"wrapper\":\"default\",\"int_value\":5,\"analyzer\":\"default\"," +
-                "\"required\":\"value\",\"restricted\":\"foo\"}}",
-            toStringWithDefaults(mapper));
+        assertEquals("{\"field\":{\"type\":\"test_mapper\",\"fixed\":true," + "\"fixed2\":false,\"variable\":\"default\",\"index\":true,"
+                + "\"wrapper\":\"default\",\"int_value\":5,\"analyzer\":\"default\"," + "\"required\":\"value\",\"restricted\":\"foo\"}}",
+                toStringWithDefaults(mapper));
     }
 
     public void testRequiredField() {
@@ -496,7 +476,7 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> merge(mapperService, fieldMapping(b -> {
             b.field("type", "test_mapper");
             b.field("required", "a");
-            b.field("int_value", 5);    // custom merge validator says that int_value can only increase
+            b.field("int_value", 5); // custom merge validator says that int_value can only increase
         })));
         assertThat(e.getMessage(), containsString("int_value"));
     }
